--- a/index.html
+++ b/index.html
@@ -14,14 +14,99 @@
 
 <body>
     <!-- coding start form here  -->
-    <header class="container mx-auto px-4 grid grid-cols-2">
+    <header class="container mx-auto px-8 pt-12 md:grid grid-cols-2 gap-12">
         <div>
             <img src="assets/images/mac.png" alt="">
         </div>
-        <div class="left content">
-            <h1>hie</h1>
+        <!-- left content -->
+        <div>
+            <!-- heading area  -->
+            <h1 class="text-5xl mb-8">Customize your Blue 24-inc iMac with Apple M1 chip. </h1>
+            <p class="text-lg mb-8">Apple M1 chip wiht 8-core CPU with 4 performance cores and 4 effciency.
+                M1 integrates the processor, graphics, memory, and more onto a single chip. That let us put an entire
+                computer into a space so small it practically disappears. </p>
+
+            <!-- all button area  -->
+            <div class="mb-10">
+                <!-- memory button  -->
+                <h3 class="text-2xl font-semibold mb-4">Memory</h3>
+                <button id="memory-8gb"
+                    class="text-lg border py-1 px-2 border-gray-400 rounded transition-colors duration-300 hover:bg-gray-100">8GB
+                    Unified
+                    memory</button>
+                <button id="memory-16gb"
+                    class="text-lg border py-1 px-2 border-gray-400 rounded transition-colors duration-300 hover:bg-gray-100">16GB
+                    Unified memory</button>
+            </div>
+            <!-- storage  -->
+            <div class="mb-10">
+                <h3 class="text-2xl font-semibold mb-4">Storage</h3>
+                <button
+                    class="text-lg border py-1 px-2 border-gray-400 rounded transition-colors duration-300 hover:bg-gray-100">256GB
+                    SSD storage</button>
+                <button
+                    class="text-lg border py-1 px-2 border-gray-400 rounded transition-colors duration-300 hover:bg-gray-100">512GB
+                    SSD storage</button>
+                <button
+                    class="text-lg border py-1 px-2 border-gray-400 rounded transition-colors duration-300 hover:bg-gray-100">1TB
+                    SSD storage</button>
+            </div>
+            <!-- delivery  -->
+            <div class="mb-10">
+                <h3 class="text-2xl font-semibold mb-4">Chose Your delivery option</h3>
+                <button
+                    class="text-lg border py-1 px-2 border-gray-400 rounded transition-colors duration-300 hover:bg-gray-100">Friday,Aug
+                    25 FREE Prime
+                    Delivery</button>
+                <button
+                    class="text-lg border py-1 px-2 border-gray-400 rounded transition-colors duration-300 hover:bg-gray-100">Friday,Aug
+                    21 Delivery charge
+                    $20</button>
+            </div>
+            <!-- calculation area  -->
+            <div class="w-3/4 mt-16">
+                <!-- best price  -->
+                <div class="flex justify-between border-b-2 py-3 pr-5">
+                    <h3 class="text-2xl font-semibold inline-block">Best Price</h3>
+                    <h3 class="text-2xl font-semibold inline-block">$<span>1299</span></h3>
+                </div>
+                <!-- Extra memory  -->
+                <div class="flex justify-between border-b-2 py-3 pr-5">
+                    <h3 class="text-2xl font-semibold inline-block">Extra Memory Cost</h3>
+                    <h3 class="text-2xl font-semibold inline-block">$<span id="extra-memory">0</span></h3>
+                </div>
+                <!-- Extra storage  -->
+                <div class="flex justify-between border-b-2 py-3 pr-5">
+                    <h3 class="text-2xl font-semibold inline-block">Extra storage Cost</h3>
+                    <h3 class="text-2xl font-semibold inline-block">$<span>0</span></h3>
+                </div>
+                <!-- delivery charge -->
+                <div class="flex justify-between border-b-4 border-gray-200 py-3 pr-5">
+                    <h3 class="text-2xl font-semibold inline-block">Delivery charge</h3>
+                    <h3 class="text-2xl font-semibold inline-block">$<span>0</span></h3>
+                </div>
+                <!-- total price header  -->
+                <div class="flex justify-between border-b-2 py-3 pr-5">
+                    <h3 class="text-2xl font-semibold inline-block">Total Price</h3>
+                    <h3 class="text-2xl font-semibold inline-block">$<span>1299</span></h3>
+                </div>
+                <!-- promo code  -->
+                <div class="mt-4">
+                    <h4 class="text-xl">Add Pomo code</h4>
+                    <input class="border w-3/4 mt-5 p-2 rounded" type="text">
+                    <button
+                        class="bg-red-500 text-white px-2 py-3 rounded transition-colors duration-300 hover:bg-red-700">Apply</button>
+                </div>
+
+            </div>
         </div>
     </header>
+    <!-- main total section  -->
+    <section class="container mx-auto px-8">
+        <div class="flex justify-center items-center mt-5 p-3 border-t-2">
+            <h1 class="text-3xl font-semibold">Total:$<span>1299</span></h1>
+        </div>
+    </section>
 
 
 
