--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- coding start form here  -->
-    <header class="container mx-auto px-8 pt-12 md:grid grid-cols-2 gap-12">
+    <main class="container mx-auto px-8 pt-12 md:grid grid-cols-2 gap-12">
         <div>
             <img src="assets/images/mac.png" alt="">
         </div>
@@ -98,13 +98,13 @@
 
             </div>
         </div>
-    </header>
+    </main>
     <!-- grand total section  -->
-    <footer class="container mx-auto px-8">
+    <section class="container mx-auto px-8">
         <div class="flex justify-center items-center mt-5 p-3 border-t-2">
             <h1 class="text-3xl font-semibold">Total:$<span id="grand-total">1299</span></h1>
         </div>
-    </footer>
+    </section>
 
     <!-- main js  -->
     <script src="assets/js/main.js"></script>
